# cgal_pybind_CMake_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/: _boolean.h  cgal_config.h
src/: _boolean.cpp
